--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -36,8 +36,18 @@
 
             />
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+
+            android:id="@+id/btnSee"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="290px"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30px"
+            />
+
+        <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
